[package]
name = "generate-axum-xlsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
calamine = "0.24.0"
dotenv = "0.15.0"
rust_xlsxwriter = "0.64.2"
tokio = { version = "1.36.0", features = ["full"] }
xlsxwriter = "0.6.0"
